# Wabper

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: rust.yml
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  entrypoint-dev.sh  entrypoint.sh
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
src/routes/: api.rs  fof.rs  mod.rs
