[package]
name = "wabper"
version = "0.1.0"
authors = ["Woomy4680-exe <matzar1808@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
env_logger = "0.8.3"
qstring = "0.7.2"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"
serde = "1"
serde_json = "1"