[package]
name = "wabper-server"
description = "Core wabper server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4.4"
wabper-router = { path = "../packages/router" }
wabper-common = { path = "../packages/common" }
wabper-db = { path = "../packages/db" }
tokio = { version = "1", features = ["full"] }
